--- a/sled_collections/templates/sled_collections/collection_split_list.html
+++ b/sled_collections/templates/sled_collections/collection_split_list.html
@@ -6,7 +6,7 @@
 
 
 <div class="jb-container">
-  <h1 class="jb-heading-1">Collections that I created</h1>
+  <h1 class="jb-heading-1">Collections that I manage</h1>
   {% if collections_owned %}
   <table class="jb-table sled-no-wrap">
     <thead>
