--- a/sled_tasks/templates/sled_tasks/task_delete.html
+++ b/sled_tasks/templates/sled_tasks/task_delete.html
@@ -9,7 +9,7 @@ Delete <strong>{{ task.task_type }}</strong> task
 
 {% block content %}
 <div class="jb-container-modal">
-  <p style="color:green">
+  <p class="jb-color-green">
     This task was completed on <strong>{{task.modified_at}}</strong>.
   </p>
   <p>
