--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -60,7 +60,7 @@
 		{{ task.status }}
 	      </span>
 	      {% else %}
-	      <span style="jb-bold jb-color-green">
+	      <span class="jb-bold jb-color-green">
 		{{ task.status }}
 	      </span>
 	      {% endif %}
