--- a/sled_tasks/templates/sled_tasks/task_list_pending.html
+++ b/sled_tasks/templates/sled_tasks/task_list_pending.html
@@ -15,7 +15,7 @@
     {% for task in pending %}
     <tr>
       <td>
-        <span style="font-weight:bold;color:red">
+        <span class="jb-bold jb-color-red">
           {{ task.status }}
         </span>
       </td>
