--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -76,7 +76,7 @@
 	      Add to collection
 	    </button>	    
 	    {% if lens.owner != user %}
-	    <button type="button" id="request-update" class="sled-modal-wide jb-submit-button-1" data-form-url="{% url 'lenses:lens-request-update' lens.id %}">
+	    <button type="button" id="request-update" class="sled-modal-wide jb-submit-button-1" data-form-url="{% url 'lenses:lens-request-update' lens.id %}" data-sled-onload="set_modal_request_update">
 	      <img src="{% static 'icons/pencil.svg' %}">
 	      Request update
 	    </button>	    
@@ -635,7 +635,7 @@
       }
   }
 
-  function set_modal_update(){
+  function set_modal_request_update(){
       $(document).on("change", "input[name*='mugshot']", function() {
 	  var $img = $(this).parent().parent().parent().find('img');
 	  readURL(this, $img);
