--- a/sled_tasks/templates/sled_tasks/task_detail_request_update_owner.html
+++ b/sled_tasks/templates/sled_tasks/task_detail_request_update_owner.html
@@ -6,11 +6,11 @@
 {% block title %}
 <span class="highlight">{{task.task_type}}</span> -
 {% if task.status == "P" %}
-<span style="font-weight:bold;color:red">
+<span class="jb-bold jb-color-red">
   Pending
 </span>
 {% else %}
-<span style="font-weight:bold;color:green">
+<span class="jb-bold jb-color-green">
   Completed
 </span>
 {% endif %}
@@ -66,12 +66,12 @@
       <tr><td>&bull; <strong>{{ response.name }}</strong> responded on <strong>{{response.created_at}}</strong> ({{ response.created_at|timesince }} ago) with:</td></tr>
       <tr><td class="padded">
 	  {{ response.response|upper }} - 
-	  <span style="text-align:right;font-style:italic;">
+	  <span class="align-right jb-italic">
 	    &ldquo;{{ response.response_comment }}&rdquo;
 	  </span>
       </td></tr>
       {% else %}
-      <tr><td>&bull; <strong>{{ response.name }}</strong> <span style="color:red">has not responded yet</span></td></tr>
+      <tr><td>&bull; <strong>{{ response.name }}</strong> <span class="jb-color-red">has not responded yet</span></td></tr>
       {% endif %}
       {% endfor %}
     </table>
