--- a/sled_tasks/templates/sled_tasks/task_merge_detail.html
+++ b/sled_tasks/templates/sled_tasks/task_merge_detail.html
@@ -291,17 +291,5 @@
 {% block extrascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function(){
-      
-      // Modals
-      $(".sled-modal").each(function() {
-	  $(this).modalForm({
-              formURL: $(this).data("form-url"),
-              modalID: "#id-modal"
-	  });
-      });
-
-  });
-</script>
+<script type="text/javascript" src="{% static 'sled_tasks/js/task_merge_detail.js' %}"></script>
 {% endblock extrascripts %}
