--- a/sled_guide/static/sled_guide/css/guide.css
+++ b/sled_guide/static/sled_guide/css/guide.css
@@ -1,14 +1,13 @@
-.side-bar {
-    width: 400px;
-    height: 80%;
-    color: red;
+.my-side-bar {
+    width: 280px;
+    height: 75%;
 }
 
-.side-bar ul {
+.my-side-bar ul {
     list-style: none;
     padding-left: 6px;
 }
 
 .whitespace {
-    height: 1000px;
+    height: 800px;
 }
