--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -440,7 +440,7 @@
 		  <td>
 		    <a href="{{ imaging.lens.get_absolute_url }}">{{ imaging.lens.name }}</a>
 		    {% if imaging.is_orphan %}
-		    DELETED
+		    <span class="jb-bold jb-color-red">DELETED</span>
 		    {% else %}
 		    {% can_access imaging.lens user as flag %}
 		    {% if not flag %}
@@ -576,7 +576,7 @@
 		  <td>
 		    <a href="{{ spectrum.lens.get_absolute_url }}">{{ spectrum.lens.name }}</a>
 		    {% if spectrum.is_orphan %}
-		    DELETED
+		    <span class="jb-bold jb-color-red">DELETED</span>
 		    {% else %}
 		    {% can_access spectrum.lens user as flag %}
 		    {% if not flag %}
@@ -830,7 +830,7 @@
 		  <td>
 		    <a href="{{ redshift.lens.get_absolute_url }}">{{ redshift.lens }}</a>
 		    {% if redshift.is_orphan %}
-		    DELETED
+		    <span class="jb-bold jb-color-red">DELETED</span>
 		    {% else %}
 		    {% can_access redshift.lens user as flag %}
 		    {% if not flag %}
@@ -972,7 +972,7 @@
 		  <td>
 		    <a href="{{ generic_image.lens.get_absolute_url }}">{{ generic_image.lens }}</a>
 		    {% if generic_image.is_orphan %}
-		    DELETED
+		    <span class="jb-bold jb-color-red">DELETED</span>
 		    {% else %}
 		    {% can_access generic_image.lens user as flag %}
 		    {% if not flag %}
