Fixed various bugs spotted while beta-testing.

--- a/lenses/templates/lenses/lens_list_query.html
+++ b/lenses/templates/lenses/lens_list_query.html
@@ -56,7 +56,7 @@
   var min_checked = function(e) {
     var checked_boxes = document.querySelectorAll('#exe_summary input[type="checkbox"]:checked');
     if (checked_boxes.length == 0) {
-      alert('You must select at least one lens!');
+      //alert('You must select at least one lens!');
       e.preventDefault();
     }
   };
