--- a/sled_papers/templates/sled_papers/paper_quick_query.html
+++ b/sled_papers/templates/sled_papers/paper_quick_query.html
@@ -18,7 +18,7 @@ Quick search for paper
   </div> 
 
   <p>
-    If the paper you are looking for does not exist in the database, you can follow the instructions on how to add it <a href="">here</a>.
+    If the paper you are looking for does not exist in the database, you can follow the instructions on how to add it <a href="{% url 'sled_guide:sled-guide' %}#adding-objects-papers">here</a>.
   </p>
 </div>
 {% endblock content %}
