--- a/sled_users/templates/sled_users/user_following.html
+++ b/sled_users/templates/sled_users/user_following.html
@@ -51,10 +51,12 @@
 </div>
 {% endblock content %}
 
-
+{% block extrastyles %}
+<link href="{% static 'sled_users/css/user_following.css' %}" rel="stylesheet" />
+{% endblock extrastyles %}
 
 {% block extrascripts %}
-<script type="text/javascript">
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
   $(document).ready(function(){
       $('.follow-button').click(function(){
 	  var this_button = $(this);
@@ -69,9 +71,8 @@
               success: function(response){
 		  jQuery('<div>', {
 		      id: 'alert-message',
-		      class: 'alert alert-icon alert-dismissible fade show mb-0 alert-success',
+		      class: 'alert alert-icon alert-dismissible fade show mb-0 alert-success message-banner',
 		      text: response["message"],
-		      style: "border-radius:0;display:none;",
 		  }).appendTo('.alert-message-container');
 		  $('#alert-message').slideDown(500).delay(2000).slideUp(500).queue(function(){
 		      $(this).remove();
@@ -80,9 +81,8 @@
               error: function(response){
 		  jQuery('<div>', {
 		      id: 'alert-message',
-		      class: 'alert alert-icon alert-error alert-dismissible fade show mb-0',
+		      class: 'alert alert-icon alert-error alert-dismissible fade show mb-0 message-banner',
 		      text: response["message"],
-		      style: "border-radius:0;display:none;",
 		  }).appendTo('.alert-message-container');
 		  $('#alert-message').slideDown(500).delay(2000).slideUp(500).queue(function(){
 		      $(this).remove();
