Fixed displayed error when adding existing items in a Collection.

--- a/sled_collections/templates/sled_collections/collection_select_to_add_items.html
+++ b/sled_collections/templates/sled_collections/collection_select_to_add_items.html
@@ -14,7 +14,7 @@ Select one of your collections to add the items
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
