Fixed displaying errors in InspectImages form.

--- a/sled_tasks/templates/sled_tasks/task_inspect_detail.html
+++ b/sled_tasks/templates/sled_tasks/task_inspect_detail.html
@@ -55,10 +55,12 @@
     
     <div class="response">
       <div>
+	{{ final_form.response.errors }}
 	{{ final_form.response }}
       </div>
       
       <div class="jb-modal-field">
+	{{ final_form.response_comment.errors }}
 	{{ final_form.response_comment }}
       </div>
       
