Fixing button style, showing collection as collage, coloring flag on lens detail page.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -201,7 +201,7 @@
         <td>{{lens.source_type}}</td>
         <td>{{lens.contaminant_type}}</td>
         <td>{{lens.image_conf}}</td>
-        <td>{{lens.flag}}</td>
+        <td>{{lens.flag|lens_flag|safe}}</td>
       </tr>
     </table>
   </div>
