--- a/templates/password/password_reset.html
+++ b/templates/password/password_reset.html
@@ -13,7 +13,7 @@
         <form method="POST">
             {% csrf_token %}
             {{ password_reset_form|crispy }}                    
-            <button class="btn btn-primary" type="submit">Send email</button>
+            <button class="jb-submit-button-1" type="submit">Send email</button>
         </form>
     </div> 
 
