--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -148,9 +148,8 @@
     </form>
   </div>
 
-  <!-- Actions for the collection owner -->
-  {% if  collection.owner == user %}
   <div>
+    {% if  collection.owner == user %}
     <form id="add-items-form" action="{% url 'lenses:lens-query' %}"></form>
     <button type="submit" form="add-items-form" class="jb-submit-button-1">
       <img src="{% static 'icons/plus.svg' %}">
@@ -160,8 +159,14 @@
       <img src="{% static 'icons/dash.svg' %}">
       Remove selected
     </button>
+    {% endif %}
+    <button type="submit" form="ids-form" class="sled-process-lenses jb-submit-button-1" formaction="{% url 'lenses:lens-collage' %}">
+      <img src="{% static 'icons/columns-gap.svg' %}">
+      See collage
+    </button>
   </div>
-  {% endif %}
+  
+  
   <br></br>
   <br></br>
 </div>
