--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -110,6 +110,11 @@
 		<img src="{% static 'icons/trash.svg' %}">
 		Delete
 	      </button>
+	      {% else %}
+	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-delete' task.id %}">
+		<img src="{% static 'icons/x-circle-fill.svg' %}">
+		Cancel
+	      </button>
 	      {% endif %}
 	      
 	      {% endif %}
