Working selection of data to export from lens query page.

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -634,7 +634,18 @@
       <img src="{% static 'icons/folder-plus.svg' %}">
       Add to collection
     </button>
-  </div>
+
+    <button type="button" id="export" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-export-csv' %}">
+      <img src="{% static 'icons/arrow-down-circle-fill.svg' %}">
+      Export .csv
+    </button>
+
+    <button type="button" id="export" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-export-json' %}">
+      <img src="{% static 'icons/arrow-down-circle-fill.svg' %}">
+      Export .json
+    </button>
+</div>
+
 </div>
 {% endblock content %}
 
